--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="start_button">Start</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_game">Math Bash</string>
+    <integer name="answer">0</integer>
 
 </resources>
