--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_activity_game">Math Bash</string>
     <integer name="answer">0</integer>
     <string name="score">Score: 0</string>
+    <string name="problem">Here</string>
 
 </resources>
