--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="title_activity_game">Math Bash</string>
     <integer name="answer">0</integer>
     <string name="score">Score: 0</string>
-    <string name="problem">Here</string>
+    <string name="problem1">Here</string>
+    <string name="problem2">Here</string>
+    <string name="problem3">Here</string>
+    <string name="problem4">Here</string>
+    <string name="problem5">Here</string>
 
 </resources>
