Changed the color of the boxes and the location of the edittext for the answer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="problem1">0</string>
     <string name="problem2">0</string>
     <string name="problem3">0</string>
-    <string name="problem4">Here</string>
-    <string name="problem5">Here</string>
+    <string name="problem4">0</string>
+    <string name="problem5">0</string>
 
 </resources>
